--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,10 @@
 [submodule "deps/cuttle-generator"]
 	path = deps/cuttle-generator
 	url = https://github.com/cuttle-system/cuttle-generator
-[submodule "tests\\cuttle-test"]
-	path = tests\\cuttle-test
+[submodule "tests/cuttle-test"]
+	path = tests/cuttle-test
 	url = git@github.com:cuttle-system/cuttle-test.git
+[submodule "deps/boost"]
+	path = deps/boost
+	url = https://github.com/boostorg/boost.git
+	ignore = dirty
