--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(CuttleFileUI VERSION 0.1 LANGUAGES CXX)
 include(CMakeToolsHelpers OPTIONAL)
 
 set(BOOST_ROOT deps/boost)
-find_package(Boost REQUIRED COMPONENTS filesystem)
+find_package(Boost 1.65.1 REQUIRED COMPONENTS filesystem)
 
 file(GLOB SRCS "src/lib/*.cpp")
 file(GLOB SRCS_MAIN "src/*.cpp")
@@ -40,8 +40,8 @@ add_executable(cuttle_fileui_tests ${TEST_SRCS} ${HEADERS} ${TEST_HEADERS})
 add_executable(cuttle_fileui ${SRCS_MAIN} ${HEADERS})
 
 target_include_directories(cuttle_fileui PRIVATE "src/lib/")
-target_include_directories(cuttle_fileui_lib PRIVATE "src/lib/" "src/" ${Boost_INCLUDE_DIR})
-target_include_directories(cuttle_fileui_tests PRIVATE "src/lib/" "tests/" "tests/cuttle-test/src/" ${Boost_INCLUDE_DIR})
+target_include_directories(cuttle_fileui_lib PRIVATE "src/lib/" "src/" "${Boost_INCLUDE_DIR}/libs/filesystem/include" "${Boost_INCLUDE_DIR}")
+target_include_directories(cuttle_fileui_tests PRIVATE "src/lib/" "tests/" "tests/cuttle-test/src/" "${Boost_INCLUDE_DIR}/libs/filesystem/include" "${Boost_INCLUDE_DIR}")
 
 target_link_libraries(cuttle_fileui_lib cuttle_parser)
 target_link_libraries(cuttle_fileui_lib cuttle_generator)
