setup new dependency manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,12 @@
 cmake_minimum_required(VERSION 3.0.2)
-
-project(CuttleFileUI VERSION 0.1 LANGUAGES CXX)
-
+project(CuttleFileUI VERSION 0.2 LANGUAGES CXX)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(CMakeToolsHelpers OPTIONAL)
-
-set(BOOST_ROOT deps/boost)
-find_package(Boost 1.65.1 REQUIRED COMPONENTS filesystem)
-
-file(GLOB SRCS "src/lib/*.cpp")
-file(GLOB SRCS_MAIN "src/*.cpp")
-file(GLOB_RECURSE TEST_SRCS "tests/*.cpp")
-
-file(GLOB HEADERS "src/lib/*.hpp")
-file(GLOB_RECURSE TEST_HEADERS "tests/lib/*.hpp")
-
+include(add_dependency)
 set(CMAKE_BUILD_TYPE Debug)
+
+set(BOOST_ROOT ../boost)
+find_package(Boost 1.65.1 REQUIRED COMPONENTS filesystem)
 
 set(CMAKE_CXX_FLAGS_DEBUG
   "${CMAKE_CXX_FLAGS_DEBUG} -std=c++14")
@@ -27,29 +19,46 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_CXX_FLAGS_RELEASE
     "${CMAKE_CXX_FLAGS_RELEASE} -Wextra -O3")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
 endif()
 
-add_subdirectory(deps/cuttle-parser)
-add_subdirectory(deps/cuttle-translator)
-add_subdirectory(deps/cuttle-generator)
-add_subdirectory(deps/cuttle-vm)
-add_subdirectory(deps/cuttle-lang)
+set(SRC_INCLUDE_DIRECTORIES
+    "src/lib/"
+    "${Boost_INCLUDE_DIR}/libs/filesystem/include"
+    "${Boost_INCLUDE_DIR}")
 
-add_library(cuttle_fileui_lib SHARED ${SRCS} ${BOOST_SRCS} ${HEADERS})
-add_executable(cuttle_fileui_tests ${TEST_SRCS} ${HEADERS} ${TEST_HEADERS})
-add_executable(cuttle_fileui ${SRCS_MAIN} ${HEADERS})
+file(GLOB SRCS "src/lib/*.cpp")
+file(GLOB SRCS_MAIN "src/*.cpp")
+file(GLOB_RECURSE TEST_SRCS "tests/*.cpp")
 
-target_include_directories(cuttle_fileui PRIVATE "src/lib/" "${Boost_INCLUDE_DIR}/libs/filesystem/include" "${Boost_INCLUDE_DIR}")
-target_include_directories(cuttle_fileui_lib PRIVATE "src/lib/" "src/" "${Boost_INCLUDE_DIR}/libs/filesystem/include" "${Boost_INCLUDE_DIR}")
-target_include_directories(cuttle_fileui_tests PRIVATE "src/lib/" "tests/" "tests/cuttle-test/src/" "${Boost_INCLUDE_DIR}/libs/filesystem/include" "${Boost_INCLUDE_DIR}")
+file(GLOB HEADERS "src/lib/*.hpp")
+file(GLOB_RECURSE TEST_HEADERS "tests/lib/*.hpp")
 
-target_link_libraries(cuttle_fileui_lib cuttle_parser)
-target_link_libraries(cuttle_fileui_lib cuttle_generator)
-target_link_libraries(cuttle_fileui_lib cuttle_translator)
-target_link_libraries(cuttle_fileui_lib cuttle_vm)
-target_link_libraries(cuttle_fileui_lib cuttle_lang)
-target_link_libraries(cuttle_fileui_lib ${Boost_LIBRARIES})
+add_dependency(cuttle-parser)
+add_dependency(cuttle-translator)
+add_dependency(cuttle-generator)
+add_dependency(cuttle-vm)
+add_dependency(cuttle-lang)
 
-target_link_libraries(cuttle_fileui_tests cuttle_fileui_lib)
-target_link_libraries(cuttle_fileui cuttle_fileui_lib)
+add_library(cuttle-fileui-lib SHARED ${SRCS} ${BOOST_SRCS} ${HEADERS})
+add_executable(cuttle-fileui-tests ${TEST_SRCS} ${HEADERS} ${TEST_HEADERS})
+add_executable(cuttle-fileui ${SRCS_MAIN} ${HEADERS})
+
+target_include_directories(cuttle-fileui PRIVATE ${SRC_INCLUDE_DIRECTORIES})
+target_include_directories(cuttle-fileui-lib PRIVATE ${SRC_INCLUDE_DIRECTORIES})
+target_include_directories(cuttle-fileui-tests
+    PRIVATE
+    "tests/"
+    "tests/cuttle-test/src/"
+    ${SRC_INCLUDE_DIRECTORIES})
+
+target_link_libraries(cuttle-fileui-lib
+    cuttle-parser
+    cuttle-generator
+    cuttle-translator
+    cuttle-vm
+    cuttle-lang
+    ${Boost_LIBRARIES})
+
+target_link_libraries(cuttle-fileui-tests cuttle-fileui-lib)
+target_link_libraries(cuttle-fileui cuttle-fileui-lib)
