--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,14 @@ set(CMAKE_BUILD_TYPE Debug)
 set(BOOST_ROOT ../boost)
 find_package(Boost 1.65.1 REQUIRED COMPONENTS filesystem unit_test_framework)
 
+file(COPY ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY_RELEASE} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+file(COPY ${Boost_FILESYSTEM_LIBRARY_RELEASE} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+file(COPY ${Boost_SYSTEM_LIBRARY_RELEASE} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
+
 set(CMAKE_CXX_STANDARD 14)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
